# vault-rag

./: .env  .gitignore  README.md  pyproject.toml
docs_to_check/: private_policy_1.txt  private_policy_2.txt
docs_to_ingest/: deep_ocean.txt  fermentation_food.txt  renewable_energy.txt
src/compliance_mcp/: checker.py  rulesets.py  server.py  vectorstore.py
src/compliance_mcp/demo/: app.py
src/compliance_mcp/demo/static/: index.html
src/rag_mcp/: chunking.py  client.py  config.py  rag.py  server.py  vectorstore.py
src/rag_mcp/demo/: app.py
src/rag_mcp/demo/static/: index.html
