[project]
name = "rag-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "fastmcp>=3.4.3",
    "ollama>=0.6.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.50.2",
]
